Javascript+Browser Related Work v1

--- a/report.bib
+++ b/report.bib
@@ -1,3 +1,24 @@
+@inproceedings{hickey2008clojure,
+  title={The clojure programming language},
+  author={Hickey, Rich},
+  booktitle={Proceedings of the 2008 symposium on Dynamic languages},
+  pages={1},
+  year={2008},
+  organization={ACM}
+}
+@article{10.1109/MIC.2011.148,
+author = {Mark McGranaghan},
+title = {ClojureScript: Functional Programming for JavaScript Platforms},
+journal ={IEEE Internet Computing},
+volume = {15},
+number = {6},
+issn = {1089-7801},
+year = {2011},
+pages = {97-102},
+doi = {http://doi.ieeecomputersociety.org/10.1109/MIC.2011.148},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
 @article{papert1999logo,
   title={Logo philosophy and implementation},
   author={Papert, Seymour and others},
