--- a/report.tex
+++ b/report.tex
@@ -121,11 +121,13 @@ In this section we start by describing work done on making programming accessibl
 We move on to present some of the current widely used solutions -- or environments -- in the Generative Design community and evaluate their conformance with the principles defined earlier.
 
 \subsection{Making Programming Accessible}
+\textbf{Change; reintroduce the subject; restructure the report}
+
 Making programming accessible to everyone has been an active area of research for many years. Some examples of programming languages designed with introducing people to programming were Logo\cite{papert1999logo} -- where the programmer explains the meaning of new words to a turtle -- and Smalltalk\cite{goldberg1983smalltalk} -- where the programmer expresses the way a group of objects exchange messages to solve a problem. Their authors are great defenders of the notion that learning how to solve/understand problems with a computer is a greater way of learning since it is a dynamic medium. An example of that is the Dynabook\cite{Kay:2011:PCC:800193.1971922}, a handheld computer prototype for children where programming is an important activity.
 
 Writing a program in a programming language can be difficult even if it was designed to be easy to use. When a programming language is coupled with an environment specifically designed for it the programming experience improves drastically. In his essay\cite{victor2012learnable}, Bret Victor described design principles over systems for learning programming; we will enumerate and describe each one of them.
 
-\subsubsection{Learnable Programming\cite{victor2012learnable}}
+\subsection{Learnable Programming\cite{victor2012learnable}}
 In this essay, Bret Victor starts by stating what the goals of a programming system should be: it should ``support and encourage powerful ways of thinking''; and it should ``enable programmers to see and understand the execution of their programs''.
 
 %TODO: Change the type of discourse to a "synthesis" of what Bret Victor said instead of a "narration" of how he said it in his paper.
@@ -171,7 +173,7 @@ The language should provide \emph{recomposition} so that the programmer can safe
 
 The language should provide \emph{readability} so that the programmer can ``look at a line of code and know what it means''; the meaning of a line of code shouldn't be ambiguous. Its syntax and names matter, i.e. the syntax should provide context to its elements and the names should clearly pinpoint what they represent within their context. It should be readable even without a fancy programming environment.
 
-\subsubsection{Processing\cite{reas2007processing}}
+\subsection{Processing\cite{reas2007processing}}
 Processing is a programming language and a development environment aimed at ``promoting software literacy in the visual arts and visual literacy within technology''.\footnote{www.processing.org} It has an heavy focus on encouraging interaction between its users and so has attracted a big community.\textsuperscript{citation needed}
 
 Processing makes it easy to start writing programs that produce visual output. The only step required to start using it is the download and installation of one of its releases. After installation one can start the \ac{pde} and start writing a new program, or a \emph{sketch} as it is referred within Processing. Its website also provides a set of tutorials to help users learn how to use it.
@@ -220,7 +222,7 @@ The \ac{pde} only aims to be an introductory environment for programming. It doe
   \label{fig:proc:dev:env}
 \end{figure} 
 
-\subsubsection{Processing vs Programming for Everyone}
+\subsection{Processing vs Programming for Everyone}
 %This is a comparison with Java. It can be seen as a limitation.
 Looking at the code in \ref{lst:simple:processing} also reveals the language's resemblance with Java. The same code fragment in Java declares two methods named ``setup'' and ``draw'' that return nothing; both methods belong to whatever class they happen to be inside of; and both have a list of statements to be executed sequentially when they are invoked. Processing's instructions, functions and sketches map to Java's statements, methods and classes.
 %Classes inside sketches are mapped into inner classes.
@@ -233,7 +235,7 @@ Looking at the code in \ref{lst:simple:processing} also reveals the language's r
 	%Describe how little feedback the environment provides. E.g. he has to run the sketch to see if it compiles and runs as he expects. This blocks creation by reaction.
 	%Describe how trying to hide Java doesn't make it a better language for learning or producing art. For doing more advanced things, Processing still requires the programmer to know Java; why not learn Java straight away? Processing tries to hide Java's metaphors, its objects; bad idea. (Scala does a better job, I suppose)
 
-\subsubsection{Impromptu\cite{sorensen2005impromptu}\cite{sorensen2010programming}}
+\subsection{Impromptu\cite{sorensen2005impromptu}\cite{sorensen2010programming}}
 Impromptu is a programming environment developed to explore manipulation of musical structure in live performance; an \ac{ide} for musicians and sound artists.
 
 %What is live-performance?
@@ -273,6 +275,77 @@ LightTable's interface was built on top of NodeWebkit\textsuperscript{citation n
 The main design pattern used in LightTable is the \ac{bot} pattern. As described by one of its developers\footnote{http://www.chris-granger.com/2013/01/24/the-ide-as-data/}, LightTable can be described as a set of \emph{Objects}, each having a set of \emph{Behaviors} and being tagged with a set of \emph{Tags}. The \emph{Behaviors} describe how an \emph{Object} reacts when events are raised on them. \emph{Tags} are groups of \emph{Behaviors}. When an event is raised on an \emph{Object} both its \emph{Behaviors} and those from its \emph{Tags} are notified.
 
 
+\subsection{Code Bubbles, Code Canvas and Debugger Canvas}
+Code Bubbles and Code Canvas approach displaying and editing program code in a different way from the usual text-based code editors. Instead of showing a programming project as a set of tabs (containing code) and a set of windows (containing tools), they show everything using ``bubbles'' on a virtual 2D surface. The surface view can then be panned and zoomed in and out for navigation.
+
+As the user explores the code base -- following variables, finding declarations -- new bubbles are created containing the code they want to see.
+
+Bubbles are laid out in the surface so that they aren't on top of each other. The user can drag the bubbles to change the layout to one that better suits his current needs (e.g. to better reflect the structure of the code or call follow).
+
+Bubbles can contain code, notes written by the user, debugging information (call stack, local variables' values). They can be grouped together and moved like so when necessary.
+
+After a usage session, the virtual surface can be saved for later resuming the session or for reference.
+
+Debugger Canvas, a Visual Studio plug-in, was developed by the teams behind Code Bubbles and Code Canvas to test their approach in the industry setting. According to their results, the approach is most suitable for debugging sessions when the code base is big or when the control flow is complex. It also appeared to be best integrated into professional programmer's tools (IDEs) as a new mode rather than a replacement.
+
+\textbf{Since we are aiming at architects we can ``assume'' that the kind of interface provided by these works is ``of some use''}.
+
+%Distintion between Code Bubbles and Code Canvas
+Code Bubbles picks up on the observation that programmers working on a task usually limit the amount of code they see to a working set. In Code Bubbles, the programmer builds the working set as he explores the code base; the built working set is represented as a set of bubbles.
+Code Canvas shows an entire software project as a 2D map. The map can reflect the file structure of the project and/or its semantic structure (e.g. namespaces, classes, methods in OOP projects). Several layers can be overlaid on top of the map such as search results or call stack visualization. The map can be filtered according to some criteria while maintaining positions relative to the entire, unfiltered, map.
+
+%Why are these important for my project?
+They both provide a metaphor where navigation around a programs code is intuitive. Having intuitive navigation enhances exploration; such exploration makes it easier to understand the code and to have new ideas (the parts bucket is on the floor as in Bret Victor's create by reacting).
+
+%Is the debugging from these of any use to architects?
+The debugging capabilities from these can help architects (or learners) to explore code from others, be it example code, parts of other projects or even code they wrote but have already forgot how it worked.
+
+
+\subsection{Rosetta}
+Rosetta is a platform for Generative Design. It grew from the desire to give the freedom to designers using the Generative Design to write their programs using the programming language they want and to easily switch where it takes effect.
+
+Its authors argue that most environments for Generative Design, developed for a specific CAD, don't provide portability of programs developed inside them. They also argue that visual programming languages, based on data-flow graphs, don't provide good abstraction mechanisms; programs on such languages are therefore hard to understand and modify.
+
+It is also stated that general purpose programming languages, like C, C++, Java and C\#, don't provide domain-specific abstractions from Generative Design and so they are inadequate.
+
+A survey of the most used GD systems showed that the most popular TPLs for GD, like AutoLisp, RhinoScript, and GDL, are old, provide little domain-specific features and make it difficult to define them. It also showed that VPLs for GD, like Grasshopper and GenerativeComponents, enforce a very restricted programming paradigm and programs scale poorly with size and complexity, making them suitable only for small throwaway prototypes. It also showed that CAD applications, being based on direct user interaction and imposing their own programming environments and languages, lock their users to the application's product family and make it difficult to achieve correctness, performance and portability.
+
+The design principles followed by Rosetta are:
+\begin{itemize}
+	\item portability (program independence from CAD applications) (enabling reuse of programs across different CAD application communities)
+	\item parametric elements (don't require designers to manually transform parametric elements into geometric shapes CADs understand)
+	\item functional operations (operations don't consume their arguments) (don't leak CAD implementation details into Generative Design languages)
+	\item dimension independent operations (uniform, predictable treatment of shapes of different dimensions)
+	\item algebra of sets (shapes as point sets in three dimensional sets) (support for operations on sets)
+	\item algebraic equivalences (to handle support discrepancies of set operations across CADs and for optimization)
+	\item traceability (between the parts of the program and their results)
+	\item immediate feedback (to changes made to the program and its input)
+\end{itemize}
+
+A modern programming environment for Generative Design should:
+\begin{itemize}
+	\item be pedagogic
+	\item provide domain-specific features
+	\item provide multiple Programming Languages
+	\item provide multiple CAD applications
+\end{itemize}
+
+Generative Design needs:
+\begin{itemize}
+	\item Portability
+	\item Mathematical and geometric strictness
+	\item Correlation between programs and models
+	\item Multiple paradigms and techniques
+	\item Modern and pedagogic system
+\end{itemize}
+
+It enables this by providing several ``frontend'' programming languages and several ``backends'' which take the results of the program. The programs written in a ``frontend'' language are compiled into an intermediate language which them translates its semantics to the selected ``backend''.
+
+Some ``frontends'' supported by Rosetta are AutoLisp, Javascript, Racket and Python; some of the supported ``backends'' include Autodesk AutoCAD, Autodesk Revit, Sketchup, Rhinoceros 3D, TikZ and OpenGL.
+
+Rosetta has been extensively used for teaching programming to architecture students at \ac{ist}. 
+
+
 \subsection{Javascript and the Web browser}
 %Mainly from Brendan Eich's presentation "Javascript at 17".
 Javascript began as the Visual Basic for web browsers. It was aimed at web designers that wanted their pages pages to change dynamically. It was inspired by the programming languages Scheme and Self.
@@ -291,6 +364,9 @@ Currently, Javascript's (or ECMAscript as it is officially called) standards aim
 With the recent focus on becoming a target language for compilers, Javascript is sometimes metaphorically called the x86 (or the assembly) of the web.
 
 Some examples of languages compiled to Javascript are ClojureScript and CoffeeScript. There are many more languages that compile to Javascript. In fact, even C and C++ can be compiled to Javascript\footnote{e.g. with ecmscripten} (or a subset of it\footnote{like asm.js, that aims to be an Ahead-Of-Time compiler friendly subset of Javascript}) and run with speeds close (2x slower) to those gotten while running native machine code. These speeds are suitable for running complex game engines inside the web browser; in a recent demo (2013) an Unreal Engine 3 level run in the web browser without any plug-ins\footnote{https://blog.mozilla.org/futurereleases/2013/05/02/epic-citadel-demo-shows-the-power-of-the-web-as-a-platform-for-gaming/}.
+
+
+\subsection{More work on CAD done in the web}
 
 
 \subsection{Wrapping Up}
