DesignScript v3:  - Added figures and description of DesignScript editors.  - Added missing pictures to the repository for LightTable and DesignScript.  - Added missing bibliography entry.

--- a/report.bib
+++ b/report.bib
@@ -155,3 +155,11 @@ author = {{de Oliveira Lopes}, Jos\'{e} Antonio Branquinho},
 title = {{Modern Programming for Generative Design Extended Abstract}},
 year = {2012}
 }
+@incollection{aish2012designscript,
+  title={DesignScript: origins, explanation, illustration},
+  author={Aish, Robert},
+  booktitle={Computational Design Modelling},
+  pages={1--8},
+  year={2012},
+  publisher={Springer}
+}
