IPython v1:  - Sketched ideas to cover on IPython.  - Added canonical bibliographic reference.  - Added sample IPython notebook picture.

--- a/report.tex
+++ b/report.tex
@@ -314,6 +314,31 @@
 	%
 	%One way DesignScript tries to succeed is to integrate various ways of modeling into the design process. These various ways of modeling are direct-manipulation mode present in any 3d modeling application, the associative mode present in many visual programming environments and the 
 
+\subsection{IPython\cite{PER-GRA:2007}}
+	IPython is a notepad-like environment directed towards providing better, more straightforward scientific computing. \emph{It makes me remember Mathematica's notebooks.} As its name suggests, IPython's main programming language is Python. While Python is its main programming language, other popular programming languages can be used in IPython, particularly those popular in the scientific community like R, Julia. \footnote{More language kernels can be found in IPython's github page: https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages}
+
+	IPython was described as a better command line shell.
+	When using an IPython notebook -> richer output versus command line interfaces.
+	Literate computing
+
+	\begin{figure}
+		\centering
+		\includegraphics[width=1.0\textwidth]{img/ipython_notebook}
+			\caption{An IPython notebook with rich text, mathematical notation, source code and results from executing such code.}
+		\label{fig:ipython:notebook}
+	\end{figure}
+
+	One trend in its community, one that is supported by IPython notebooks, is to make results in publications more reproducible. Instead of publishing a PDF or making a blog post the authors write whole publications as IPython notebooks which then are shared and thus allow everyone to run their source code. Having access to a working copy of the notebook, one can also experiment with it to better understand it, form own conclusions or find errors.
+
+	Since it aims to be ``A tool for managing the entire lifecycle of a scientific idea''\footnote{Quoting Fernando Perez in his Scipy 2012 Keynote.}, it also provides parallel computation primitives.
+
+	%IPython architecture
+	IPython was decomposed into ``execution kernels'', a communication protocol and several front-ends. As each type of component has a defined interface it is possible to implement new specialized components (a new frontend or a new execution kernel) that will integrate with those already implemented.
+
+	%Why is it important? I can't imagine designers using it.
+	The style of producing notebooks in IPython is one that mixes programming, writing and exploring. This style is also part of a designer's processes. Like a scientist, the designer also has to do exploration of ideas (design ideas in his case), reach conclusions (crystallized designs) and share his work with others (fellow designers, clients, friends, blog readers). 
+	IPython notebooks, more generally notebooks, are natural tools for exploration.
+	IPython notebooks don't provide domain specific functionality for architecture.
 
 \subsection{LightTable}
 	LightTable is code editor for the Clojure programming language\cite{hickey2008clojure}. It was first written in Clojure and most of its code was later moved to ClojureScript\cite{10.1109/MIC.2011.148}, a subset of Clojure that compiles to Javascript.
