--- a/report.tex
+++ b/report.tex
@@ -78,9 +78,9 @@
 
 	There are several environments/software packages that enable people to use Generative Design to make 3D models. First, after recognizing the advantages it brings to its users\footnote{Many architecture and design projects require a lot of repetition, the \emph{forte} of programming/machines.}, all major CAD softwares used by architects support Generative Design through dedicated programming environments. There are also standalone programming environments like Processing\cite{reas2007processing} or Rosetta\cite{de2012modern}; the first is a programming environment for the visual (or other) arts and the second is an environment specifically for Generative Design that aims to separate the design from the CAD its results are ``displayed'' in. As pure programming environments, these last two don't consider/provide direct manipulation as a primary tool in their approach.
 
-	Like online programming courses, programing environments for Generative Design can move to the web browser. Complementarily to not requiring installation, moving to the browser (or to a website) also makes programming environments available from anywhere a browser is found, be it a computer running Windows, Mac OS X or a Linux or even an Android tablet. They would require no installation, would be ubiquitous and would be OS independent; contrasting with major CADs, like AutoCAD\footnote{Currently AutoCAD has a full-featured version running on Windows and a less feature rich version running on Mac OS}, that are tied to one OS or have serious drawbacks against using other OSs.
+	Like online programming courses, programing environments for Generative Design can move to the web browser. Complementarily to not requiring installation, moving to the browser (or to a website) also makes programming environments available from anywhere a browser is found, be it a computer running Windows, Mac OS X or a Linux or even an Android tablet. They would require no installation, would be ubiquitous and would be OS independent; contrasting with major CADs, like AutoCAD\footnote{Currently AutoCAD has a full-featured version running on Windows and a less feature rich version running on Mac OS.}, that are tied to one OS or have serious drawbacks against using other OSs.
 
-	There aren't any known Generative Design environment that run in the web browser. This is in part because until now the browser didn't have the necessary technology to support performant 3D applications. This is not the case right now. Clara.io\cite{Houston:2013:CFC:2503673.2503681}, an online 3D modeler (like 3ds Max) and \textbf{*insert js webapp here*} show that it is possible to build web browser based applications that are on pair with their desktop analogs.
+	There aren't any known Generative Design environments that run in the web browser. This is in part because until now the browser didn't have the necessary technology to support performant 3D applications. This is not the case right now. Clara.io\cite{Houston:2013:CFC:2503673.2503681}, an online 3D modeler (like 3ds Max) and \textbf{*insert js webapp here*} show that it is possible to build web browser based applications that are on pair with their desktop analogs.
 
 	We propose a web browser based Generative Design environment. Such environment will allow architects, or anyone interested in Generative Design, to edit Generative Design programs and visualize their results while not requiring any installation. It will thus allow them to do Generative Design on any computer that has a modern browser. Not being tied to a workstation will allow them to work closer to their clients and to more swiftly change their designs to accommodate the client's needs.
 	%TODO: Introduce the well established tools (ex: cads) that architects and designers use in their work.
@@ -518,7 +518,7 @@
 
 	The prototype is implemented using HTML, Javascript, CSS and two Javascript libraries; the first, Ace\footnote{http://ace.c9.io/}, provides the text editor and the second, THREE.js\footnote{http://threejs.org/}, provides a high-level interface with WebGL rendering.
 
-	With its naive implementation, the use of the prototype has already made clear one problem: always trying to run a program while it is being change can lead to poor responsiveness or even permanent lockup of the interface. The usual cause being the increasing complexity of the program or the presence of infinite loops in the program. This problem will have to be addressed in order to have a usable interface. Some alternatives to solve the problem could be running the program asynchronously and retrieving the results afterwards or instrumenting the program so it could be run interleaved with interface handling and stopped if necessary.
+	With its naive implementation, the use of the prototype has already made clear one problem: always trying to run a program while it is being changed can lead to poor responsiveness or even permanent lockup of the interface. The usual cause being the increasing complexity of the program or the presence of infinite loops in the program. This problem will have to be addressed in order to have a usable interface. Some alternatives to solve the problem could be running the program asynchronously and retrieving the results afterwards or instrumenting the program so it could be run interleaved with interface handling and stopped if necessary.
 
 
 
