Aspects of the solution v2: Added comment on what the section is supposed to talk about.

--- a/report.tex
+++ b/report.tex
@@ -536,6 +536,8 @@
 
 	Other aspect is the way programs can be applied to other modeling applications used by architects. Rosetta uses the concept of selecting a backend, a specific interface to a modeling application. After selecting a backend for a modeling application, Rosetta connects to it and results of running the program are passed to the application. The system could connect to Rosetta which would then connect to the application. This approach requires the setup of a communication channel between the browser where the system is running and Rosetta. The system could alternatively use a language that Rosetta already supports. When the user wants to pass the result of the program to the application he only has to select the desired backend and run the program inside Rosetta.
 
+	%It should enumerate the various aspects of concern to be considered while making the solution. It may as well provide some alternatives to some aspects that are already known. These alternatives can refer to products already available.
+
 %----------------------------------------------------
 %NAVevaluation
 \section{Evaluation (1/2pgs)}
